# Landwirtschaftssimulator

./: .env.example  .gitignore  AGENTS.md  AGENT_BOARD.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  Dockerfile  EVALS.md  LICENSE  MODELS.md  Makefile  PROMPTS.md  README.md  ROADMAP.md  SECURITY.md  SKILLS.md  TASKS.md  TESTING.md  compose.yaml  package.json  pyproject.toml  wrangler.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
apps/game/: README.md  (+2 more)
configs/: assets.yaml  brands.yaml  godot.yaml  integrations.yaml  pipeline.yaml
data/: README.md
docs/: ACCESSIBILITY_AND_UX.md  ANDROID_BUILD.md  AUTONOMOUS_WORK_MODE.md  CLOUDFLARE_DEPLOYMENT.md  CONTAINER_EXECUTION.md  DATA_AND_SAVEGAME.md  DIFFICULTY_LEVELS.md  ECONOMY_AND_BALANCING.md  EDUCATION_CONCEPT.md  FIELDS_AND_CROPS.md  GAME_DESIGN_DOCUMENT.md  GRAPHICS_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSING_AND_BRANDS.md  MACHINES_AND_BRANDS.md  PERFORMANCE_BUDGET.md  PRODUCT_REQUIREMENTS.md  RELEASE_CHECKLIST.md  REPOSITORY_PLAN.md  TROUBLESHOOTING.md  WORK_BREAKDOWN.md
prompts/: eval_prompts.md
scripts/: balance.sh  bootstrap.sh  check_repo_governance.py  test.sh  validate.sh  validate_repository.py
tests/: test_balancing.py  test_calendar.py  test_data_invariants.py  test_field_state_machine.py  test_godot_playable_spike.py  test_procurement_and_maintenance.py  test_regression_100_years.py  test_repository_structure.py  test_savegame.py  test_vehicle_interaction_spike.py
tools/: common.py
website/: app.js  index.html  styles.css
(+51 files in other folders)
