[project]
name = "landwirtschaftssimulator-tools"
version = "0.1.0"
description = "Repository and asset validation tools for Landwirtschaftssimulator"
requires-python = ">=3.11,<3.13"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
